# pystl

./: CLAUDE.md  README.md  output.scad  output.stl  pyproject.toml
scripts/: boilerplate.py  fardriver_clamp.py  filleted_escutcheon.py  grit_shift_clamp.py  lamp_clamp.py  lamp_clamps.py  lamp_frame.py  lamp_retainer.py  lamp_side_panel.py  offset_lamp_clamp.py  test_filleted_frame.py  test_library_part.py  test_pipe_clamp.py  turn_signal_clamp.py
src/pystl/: __init__.py  cli.py  py_stl_base.py  py_stl_geometry.py  py_stl_part.py  utils.py
tests/: test_example.py  test_general_pipe_clamp.py  test_utils.py
