[project]
name = "pystl"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "solidpython2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pystl"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
strict = true
disable_error_code = ["import-untyped"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]
